--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,6 @@
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-*.smod
-
 # Compiled Static libraries
 *.lai
 *.la
@@ -29,4 +25,5 @@
 *.app
 
 *.sw*
+compile_flags.txt
 gktrace
