--- a/resources/Containerfile
+++ b/resources/Containerfile
@@ -1,10 +1,10 @@
-FROM ghcr.io/tcarland/tcalibcore:v25.04.01
+FROM ghcr.io/tcarland/tcalibcore:v25.05.15
 
 USER root
 
-ENV TCAMAKE_HOME /opt/tcamake
-ENV TCAMAKE_PREFIX /usr
-ENV TCAMAKE_PROJECT /opt
+ENV TCAMAKE_HOME=/opt/tcamake
+ENV TCAMAKE_PREFIX=/usr
+ENV TCAMAKE_PROJECT=/opt
 
 COPY . /opt/gktrace
 
@@ -12,10 +12,11 @@ WORKDIR /opt
 
 RUN chown -R tdh:tdh /opt/gktrace && \
     cd /opt/gktrace && \
-    source resources/release.profile && \
+    source resources/gktrace-release.env && \
     make && \
     make install && \
     make clean
 
 USER tdh
 ENTRYPOINT ["/usr/bin/tini", "--"]
+
